--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Code -->
     <nav class="navbar py-3 navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Rodrigo Silipú</a>
+          <a class="navbar-brand" href="#">Rodrigo Silupú</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
