--- a/research.html
+++ b/research.html
@@ -70,12 +70,13 @@
                     
                                         
                 </p>
-                <h1 class="display-6 mb-3 text-primary">Researchito</h1>
-                <p>asdfadf adfadsf aadfsdf fdasfdsf adfasfdf dfsadfd fdsaf fdfdsff sfds sss s s fd sdfadf 
-                    asdfafasdf,   asdfasf asfdmf wef   wfew fef w      w few ewf ew few f f wf e wfe fw few
-                    wfefwefwfefwefw fw ef w feof wojefef wfoe w eofaon uoawfeawnfoenfaqwf f wef
-                    fwejofn wf nwiofnmef wfown wfeiwf ewpfwpfo
-                </p>
+                <h1 class="display-6 mb-3 text-primary">Competition, Liberalization and Productivity: The Case of Peru 2003-2017</h1>
+                <pre>
+                    Mario D. Tello Pacheco & Cristina J. Tello-Trillo
+                    This paper analyzed the impact of competition on the growth of total productivity 
+                    of manufacturing companies, using estimates of the effects of Peru's three 
+                    preferential trade agreements with the US, China, and the EU for the period 2003-2017.
+                </pre>
                 <ul>
                     <li>asfdafdfdffas</li>
                     <li>asfdafdfdffas</li>
