--- a/research.html
+++ b/research.html
@@ -62,20 +62,18 @@
             <!--Section-->
             <div class="col-lg-8 col-md-8 col-sm-12">
                 <h1 class="display-4 mb-3 text-primary">Research</h1>
-                <p>Competition, Liberalization and Productivity: The Case of Peru 2003-2017 
-                Mario D. Tello Pacheco & Cristina J. Tello-Trillo
-This paper analyzed the impact of competition on the growth of total productivity 
-of manufacturing companies, using estimates of the effects of Peru's three 
-preferential trade agreements with the US, China, and the EU for the period 2003-2017.
-                    
+                <p> 
+                  In my experience as a research assistant, I supported the following projects
                                         
                 </p>
                 <h1 class="display-6 mb-3 text-primary">Competition, Liberalization and Productivity: The Case of Peru 2003-2017</h1>
                 <pre>
                     Mario D. Tello Pacheco & Cristina J. Tello-Trillo
-                    This paper analyzed the impact of competition on the growth of total productivity 
-                    of manufacturing companies, using estimates of the effects of Peru's three 
-                    preferential trade agreements with the US, China, and the EU for the period 2003-2017.
+                    This paper analyzed the impact of competition on the growth of total productivity of manufacturing companies, 
+                    using estimates of the effects of Peru's three preferential trade agreements with the US, China, and the EU 
+                    for the period 2003-2017. 
+                    In this research, I was in charge of the literature review, the construction of the database, regressions, 
+                    and final output tables.
                 </pre>
                 <ul>
                     <li>asfdafdfdffas</li>
