--- a/research.html
+++ b/research.html
@@ -90,7 +90,7 @@
                 the database, regressions, and final output tables.
                 </pre>
 
-                <h2 class="display-8 mb-3 text-primary">: Un Análisis Provincial Exploratorio de los Efectos del COVID-19 en los Ingresos, Empleo y Pobreza en el  Perú, 2011-2020</h1>
+                <h2 class="display-8 mb-3 text-primary">Un Análisis Provincial Exploratorio de los Efectos del COVID-19 en los Ingresos, Empleo y Pobreza en el  Perú, 2011-2020</h1>
                 <pre>
                 Mario D. Tello Pacheco (2021)
                 The research won the XXII Annual CIES Research Contest 2020-2, as a Medium Project.
@@ -101,9 +101,9 @@
                 In this research, I was in charge of the literature review, the construction of the 
                 database, all the application of the Augmented Synthetic Control method
                 and its respective tests, and final output tables. 
-                </pre>                
-
-            </div>
+                </pre>   
+                
+                </div>
             <!--End Section-->
         </div>
       </div>
