--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-lg-2 col-md-2 col-sm-12">
                 <div class="text-center">
                     <img src="resources/luisinimg.jpeg" class="rounded-circle mb-3 border border-5" alt="luisinimg" width="150px">
-                    <h5>Rodrigo Silipú</h5>
+                    <h5>Rodrigo Silupú</h5>
                     <p class="">Economics student at Pontifial Catholic University of Peru</p>
                 </div>
                 <br>
@@ -62,9 +62,12 @@
             <div class="col-lg-8 col-md-8 col-sm-12">
                 <h1 class="display-4 mb-3 text-primary">About Me</h1>
                 <p>I'm an economics student at Pontifical Catholic University of Peru. 
-                    I work as Research Assistant for Mario Tello (Pontifical Catholic University of Peru), 
-                    David Mayorga (Research Center of the Universidad del Pacifico) 
-                    and Ronald Rivas (Canisius College).</p>
+                    I'm Interested in international trade issues, impact assessment, quantitative methods 
+                    and data science. I have work experience as a teaching assistant and research assistant in the PUCP and CIUP. 
+                    Actually, I work as Research Assistant for Mario Tello (Pontifical Catholic University of Peru), 
+                    David Mayorga (Research Center of the Universidad del Pacifico) and Ronald Rivas (Canisius College).
+                    Student of tenth cycle of Economics at the Pontificia Universidad Católica del Perú (PUCP).           
+                </p>
             </div>
         </div>
       </div>
