--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <p>I'm an economics student at Pontifical Catholic University of Peru. 
                     I'm Interested in international trade issues, impact assessment, quantitative methods 
                     and data science. I have work experience as a teaching assistant and research assistant in the PUCP and CIUP. 
-                    Actually, I work as Research Assistant for Mario Tello (Pontifical Catholic University of Peru), 
-                    David Mayorga (Research Center of the Universidad del Pacifico) and Ronald Rivas (Canisius College).
+                    Actually, I work as Research Assistant for PhD. Mario Tello (Pontifical Catholic University of Peru), 
+                    PhD. David Mayorga (Research Center of the Universidad del Pacifico) and PhD. Ronald Rivas (Canisius College).
                     Student of tenth cycle of Economics at the Pontificia Universidad Católica del Perú (PUCP).           
                 </p>
             </div>
