--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h1 class="display-4 mb-3 text-primary">About Me</h1>
                 <p>I'm an economics student at Pontifical Catholic University of Peru. 
                     I'm Interested in international Trade, Impact evaluation, quantitative methods 
-                    and data science. I have work experience as a teaching assistant and research assistant in the PUCP and CIUP. 
+                    and data science. I have work experience as a teaching assistant and research assistant. 
                     Actually, I work as Research Assistant for PhD. Mario Tello (Pontifical Catholic University of Peru), 
                     PhD. David Mayorga (Research Center of the Universidad del Pacifico) and PhD. Ronald Rivas (Canisius College).
                           
